--- a/public/styles/create-point.css
+++ b/public/styles/create-point.css
@@ -45,12 +45,22 @@ form fieldset{
 }
 
 form legend{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     margin-bottom: 40px;
+    width: 100%;
 }
 
 form legend h2{
     font-size: 24px;
 }
+
+form legend span{
+    font-size: 14x;
+    color: var(--title-color);
+}
+
 
 form .field{
     flex: 1;
