--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,7 +20,7 @@
             <main>
                 <h1>Seu marketplace de coleta de resíduo</h1>
                 
-                <p> Ajudamos pessoas a encontrarem poontos de coleta de forma eficiente.</p>
+                <p> Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.</p>
                 
                 <a href="#"><span></span> <strong>Pesquisar pontos de coleta</strong></a>
             </main>
