--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -21,10 +21,10 @@
     #page-search-results .cards{
         height: 250px;
     }
-    #page-create-point .field-group{
+    #page-create-visitante .field-group{
         flex-direction: column;
     }
-    #page-create-point .field-group .field + .field{
+    #page-create-visitante .field-group .field + .field{
         margin-left: 0;
     }
 
