--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -29,12 +29,10 @@ body::after{
     font-weight: bold;
     display: flex;
     align-items: center;
-}
+} 
 #page-search-results header a span{
     margin-right: 16px;
-    background-image: url('../assets/arrow-left.svg');
     display: flex;
-
     width: 20px;
     height: 24px;
 }
@@ -43,41 +41,24 @@ main{
     margin: 48px;
 }
 
-main h4{
+main h2{
     font-weight: normal;
     font-family: Roboto, sans-serif;
     margin-bottom: 32px;
 
 }
 
-main .cards{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 24px;
+main .visitantes{
+    margin-top: 120px;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
 }
-main img{
-    width: 100%;
-    height: 150px;
-    border-radius: 8px 8px 0 0 ;
-    object-fit: cover;
+main .visitantes h1{
+    margin: auto;
 }
-
-main .card h1{
-    margin: 32px 0 24px;
-    font-size: 36px;
-    line-height: 41px;
-    color: #322153; 
+table h1, h3{
+    margin-left: 60px;
+    margin-right: 60px;
+    align-items: center;
 }
-
-main .card h3{
-    margin: 24px 0;
-
-    font-family: Roboto;
-    font-weight: 700;
-
-    font-size: 24px;
-    line-height: 32px;
-
-    color: var(--primary-color);
-}
-
