--- a/src/views/partials/visitante-cadastrado.html
+++ b/src/views/partials/visitante-cadastrado.html
@@ -1,7 +1,6 @@
 <div id="modal" class="point">
     <div class="content">
-        <img src="/assets/check.svg" alt="Cadastro concluído">
-        <h1>Cadatro concluído</h1>
+        <h1>Cadatro concluído com sucesso</h1>
     </div>
 </div>
 
