--- a/src/views/create-visitante.html
+++ b/src/views/create-visitante.html
@@ -6,6 +6,7 @@
 {% endblock title %}
 {% block styles %}
     <link rel="stylesheet" href="/styles/create-visitante.css">
+    <link rel="stylesheet" href="/styles/modal.css">
 {% endblock styles %}
 
 {% block content %}
