--- a/src/views/estacionamento.html
+++ b/src/views/estacionamento.html
@@ -55,6 +55,6 @@
 		</div>
 	</div>
 </div>
-        <script src="scritps/estacionamento.js"></script>
+        <script src="/scripts/estacionamento.js"></script>
 	</body>
 </html>
