--- a/src/views/partials/visitante-cadastrado.html
+++ b/src/views/partials/visitante-cadastrado.html
@@ -1,4 +1,5 @@
 <div id="modal" class="point">
+    <link rel="stylesheet" href="/styles/modal.css">
     <div class="content">
         <h1>Cadatro concluído com sucesso</h1>
     </div>
