--- a/src/views/index.html
+++ b/src/views/index.html
@@ -18,6 +18,9 @@
                 <a href="/create-cost">
                    <strong> Cadastro de Despesa</strong>
                 </a>
+                <a href="/cotas">
+                   <strong> Gerar Cotas</strong>
+                </a>
                 <a href="/search">
                     <strong>Listar Visitantes</strong>
                 </a>
