--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,6 +1,6 @@
 {% set pageId = "page-home" %}
 
- <title>Ecoleta</title>
+ <title>SGCC</title>
     {% block styles %}
         <link rel="stylesheet" href="/styles/home.css">
     {% endblock styles %}
