--- a/src/views/search-cost.html
+++ b/src/views/search-cost.html
@@ -21,7 +21,7 @@
         <div class="visitantes">
         <table border="1">
         <tr>
-           <th><h1>Total de Locatarios</h1></th> 
+           <th><h1>Total de Locadores</h1></th> 
            <th><h1>Despesas no mes</h1> </th>
            <th><h1>Valor por Cota</h1> </th>
 
